# simple_ip_service

./: .Dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: config.py  errors.py  main.py  templates.py
src/templates/: 404.html  500.html  main.html
