[project]
name = "simple_ip_service"
version = "0.1.0"
description = "A simple IP address API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.46.2",
    "uvicorn>=0.34.1",
]


[tool.ruff]
lint.select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
]
lint.ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "B009",  # Do not call `getattr` with a constant attribute value
  "C901",  # too complex
  "E701",  # Multiple statements on one line (colon)
]

# Same as Black.
line-length = 100
